--- a/test0504.html
+++ b/test0504.html
@@ -1,16 +1,140 @@
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.css" rel="stylesheet" type="text/css">
-  </head>
-
-  <body>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-    <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="0504 test" type="text/css">
+  <!-- Latest compiled and minified CSS -->
+  <!-- bootstrap模板 -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- bootstrap模板 -->
+  <script type="text/javascript">
+    /* Side slide menu */
+  		function openNav() {
+      document.getElementById("mySidenav").style.width = "250px";
+  }
   
+  function closeNav() {
+      document.getElementById("mySidenav").style.width = "0";
+  }
+  /* tab slider */
+  $(document).ready( function() {
+      $('#myCarousel').carousel({
+        
+          interval:   4000
+  	});
+  	
+  	var clickEvent = false;
+  	$('#myCarousel').on('click', '.nav a', function() {
+  			clickEvent = true;
+  			$('.nav li').removeClass('active');
+  			$(this).parent().addClass('active');		
+  	}).on('slid.bs.carousel', function(e) {
+  		if(!clickEvent) {
+  			var count = $('.nav').children().length -1;
+  			var current = $('.nav li.active');
+  			current.removeClass('active').next().addClass('active');
+  			var id = parseInt(current.data('slide-to'));
+  			if(count == id) {
+  				$('.nav li').first().addClass('active');	
+  			}
+  		}
+  		clickEvent = false;
+  	});
+  });
+  </script>
+</head>
+
+<body>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+  <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
+  <header>
+    <div class="container header inner">
+      <nav class="navbar">
+        <div class="container">
+          <div class="navbar-header"> <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>                        
+			      </button> <a class="navbar-brand" href="#">Company</a> </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right masthead-nav">
+              <li><a href="#"> E-commerce Logistics</a></li>
+              <li><a href="#"> Contract Logistics</a></li>
+              <li><a href="#"> Courier</a></li>
+              <li><a href="#"> Transport</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <div id="mySidenav" class="sidenav"> <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a> <a href="#">About</a> <a href="#">Services</a> <a href="#">Clients</a> <a href="#">Contact</a> </div> <span style="font-size:30px;cursor:pointer;float:right;color:#fff;position:absolute;top:5%;right: 10px;"
+    onclick="openNav()">☰</span>
+  <!--
+		<div class="container-fluid tabStrip">
+		  <ul class="nav nav-tabs text-center">
+		    <li class="col-sm-3 grey"><a href="#"><i class="fa fa-truck fa-2x col-sm-12"></i><span class="col-sm-12">Packers and Movers</span></a></li>
+		    <li class="col-sm-3 orange"><a href="#"><i class="fa fa-ship fa-2x col-sm-12"></i><span class="col-sm-12">Cargo</span></a></li>
+		    <li class="col-sm-3 blue"><a href="#"><i class="fa fa-building fa-2x col-sm-12"></i><span class="col-sm-12">Warehouse</span></a></li>
+		    <li class="col-sm-3 green"><a href="#"><i class="fa fa-building fa-2x col-sm-12"></i><span class="col-sm-12">Transport</span></a></li>
+		  </ul>
+		</div>
+-->
+  <div class="container-fluid tabSlider">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" style="opacity: 0.5;">
+      <ul class="nav nav-pills nav-justified">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"><a href="#"><i class="fa fa-truck fa-2x col-sm-12"></i>Packers and Movers</a></li>
+        <li data-target="#myCarousel" data-slide-to="1"><a href="#"><i class="fa fa-ship fa-2x col-sm-12"></i>Cargo</a></li>
+        <li data-target="#myCarousel" data-slide-to="2"><a href="#"><i class="fa fa-building fa-2x col-sm-12"></i>Warehouse</a></li>
+        <li data-target="#myCarousel" data-slide-to="3"><a href="#"><i class="fa fa-building fa-2x col-sm-12"></i>Transport</a></li>
+      </ul>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active"> <img src="http://placehold.it/1200x400/cccccc/ffffff" width="100%;">
+          <div class="carousel-caption">
+            <h3>Headline</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. <a href="http://sevenx.de/demo/bootstrap-carousel/" target="_blank" class="label label-danger">Bootstrap 3 - Carousel Collection</a></p>
+          </div>
+        </div>
+        <!-- End Item -->
+        <div class="item"> <img src="http://placehold.it/1200x400/999999/cccccc" width="100%;">
+          <div class="carousel-caption">
+            <h3>Headline</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. <a href="http://sevenx.de/demo/bootstrap-carousel/" target="_blank" class="label label-danger">Bootstrap 3 - Carousel Collection</a></p>
+          </div>
+        </div>
+        <!-- End Item -->
+        <div class="item"> <img src="http://placehold.it/1200x400/dddddd/333333" width="100%;">
+          <div class="carousel-caption">
+            <h3>Headline</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. <a href="http://sevenx.de/demo/bootstrap-carousel/" target="_blank" class="label label-danger">Bootstrap 3 - Carousel Collection</a></p>
+          </div>
+        </div>
+        <!-- End Item -->
+        <div class="item"> <img src="http://placehold.it/1200x400/999999/cccccc" width="100%;">
+          <div class="carousel-caption">
+            <h3>Headline</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+          </div>
+        </div>
+        <!-- End Item -->
+      </div>
+      <!-- End Carousel Inner -->
+    </div>
+  </div>
+  <!-- Latest compiled and minified JavaScript -->
+  <!-- bootstrap模板 -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- bootstrap模板 -->
+</body>
+
 </html>
